--- a/09-Data-Structures-Operators/final/index.html
+++ b/09-Data-Structures-Operators/final/index.html
@@ -39,8 +39,8 @@
 
 <body>
   <h1>Data Structures and Modern Operators</h1>
-  <script type="module" src="scriptAssign.js"></script>
-  <!-- <script src="scriptTomer.js"></script> -->
+  <!-- <script type="module" src="scriptAssign.js"></script> -->
+  <script src="scriptTomer.js"></script>
 </body>
 
 </html>
